--- a/app/design/frontend/base/default/template/payu/mark.phtml
+++ b/app/design/frontend/base/default/template/payu/mark.phtml
@@ -30,4 +30,4 @@
  * @see Mage_Paypal_Block_Standard_Form
  */
 ?>
-<img src="http://www.payulatam.com/logos/img/payu_solo_107x51.png" alt="PayU" width="107" height="51" border="0">
+<img src="http://www.payulatam.com/logos/img/Colombia.jpg" alt="PayU" border="0">
