--- a/app/design/frontend/default/ves_fashion/template/page/html/appointment.phtml
+++ b/app/design/frontend/default/ves_fashion/template/page/html/appointment.phtml
@@ -1,5 +1,5 @@
 <div id="appointment">
-	<h1>Agende una cita</h1>
+	<h1>Agenda una cita</h1>
 
 	<div class="form">
 
@@ -14,9 +14,9 @@
 
 		<div id="appointment-intro">
 			<h2>PRUÉBATE UNA CAMISA ZIENTE</h2>
-			<p>Alguna vez quiso probarse una camisa Ziente antes de comprarla? Ahora lo puede hacer. Programe una cita y pase por nuestro punto de venta para obtener una fácil y rápida experiencia de compra.</p>
-			 
-			<div class="button-center"><button class="button" onclick="location.href='customer/account/'">AGENDA</button></div>
+			<p>¿Quieres probarte una camisa ZIENTE antes de comprarla? Programa una cita y pasa por nuestro showroom. Podrás conocer todos nuestros productos.</p>
+
+			<div class="button-center"><button class="button7" onclick="location.href='customer/account/'">AGENDA UNA CITA</button></div>
 		</div>
 
 	<?php
