--- a/app/design/frontend/default/ves_fashion/template/persistent/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/ves_fashion/template/persistent/checkout/onepage/shipping.phtml
@@ -93,12 +93,14 @@
                         </div>
                     </li>
                     <li class="fields">
+                    <!--
                         <div class="field">
-                            <label for="shipping:postcode" class="required"><em>*</em><?php echo $this->__('Zip/Postal Code') ?></label>
+                            <label for="shipping:postcode"><?php echo $this->__('Zip/Postal Code') ?></label>
                             <div class="input-box">
-                                <input type="text" title="<?php echo $this->__('Zip/Postal Code') ?>" name="shipping[postcode]" id="shipping:postcode" value="<?php echo $this->escapeHtml($this->getAddress()->getPostcode()) ?>" class="input-text form-control validate-zip-international <?php echo $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" onchange="shipping.setSameAsBilling(false);" />
+                                <input type="text" title="<?php echo $this->__('Zip/Postal Code') ?>" name="shipping[postcode]" id="shipping:postcode" value="<?php echo $this->escapeHtml($this->getAddress()->getPostcode()) ?>" class="input-text validation-passed" onchange="shipping.setSameAsBilling(false);" />
                             </div>
                         </div>
+                    -->
                         <div class="field">
                             <label for="shipping:country_id" class="required"><em>*</em><?php echo $this->__('Country') ?></label>
                             <div class="input-box">
