--- a/skin/frontend/default/ves_fashion/css/styles.css
+++ b/skin/frontend/default/ves_fashion/css/styles.css
@@ -7020,6 +7020,24 @@ body,
  * @copyright Copyright (C) Augus 2013 Venustheme.com <@emai:venustheme@gmail.com>.All rights reserved.
  * @license   GNU General Public License version 2
 *******************************************************/
+
+@media screen and (max-width: 1024px) {
+  .col-sm-5{
+    width: 100%;
+  }
+  .custom-subscribe{
+    clear: both;
+    width: 100%;
+  }
+  .col-sm-7{
+    width: 100%;
+  }
+  div.custom-footer-box1, div.custom-footer-box2, div.custom-footer-box3{
+    width: 33%;
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 991px) {
   /* line 11, E:/Work/BrainOS/SVN.Local/magento.svn/themes/ves_fashion/ves_fashion_theme_1.8.1/skin/frontend/default/ves_fashion/sass/magento/_responsive.scss */
   .quick-access {
@@ -7175,6 +7193,136 @@ body,
   #cboxOverlay,
   #colorbox, .vescontentslider, .module_customblock {
     display: none !important;
+  }
+  .col-xs-12 {
+    clear: both;
+  }
+  .custom-footer-box1{
+    margin-left: 20px;
+  }
+  div.custom-footer-box1, div.custom-footer-box2, div.custom-footer-box3{
+    padding-bottom: 20px; 
+    padding-left: 20px;
+    width: 100%;
+  }
+  div.custom-footer-box1 ul{
+    margin-top: 0;
+  }
+  div.custom-footer-box1 li{
+    margin-top: 0; 
+  }
+  div.custom-footer-box2 li{
+    margin-bottom: 0;
+  }
+  div#camisas, div#historia, div#appointment, div#colecciones, div#ayuda, div#comprar, div#terms {
+    width: 100%;
+    padding-top: 20px;
+  }
+  div.camisas-tabla-wrap {
+    width: 100%;
+  }
+  table.camisas-tabla{
+    width: 100%;
+    margin-top: 0;
+  }
+  td.camisas-tabla{
+    margin-top: 10px;
+  }
+  table.camisas-tabla .col1{
+    width: 100%;
+    float: left;
+    clear: both;
+    padding-bottom: 0;
+    text-align: center;
+  }
+  table.camisas-tabla .col1 img{
+    width: 40%;
+  }
+  table.camisas-tabla .col2{
+    width: 100%;
+    float: left;
+    clear: both;
+    padding-top:0;
+  }
+  table.camisas-tabla .col3{
+    width: 100%;
+    float: left;
+    clear: both;
+    padding-bottom: 0;
+  }
+  div.camisas-tabla {
+    width: 100%;
+  }
+  div.camisas-largo-imagen{
+    width: 100%;
+  }
+  div.camisas-largo-texto{
+    width: 100%;
+  }
+  div.camisas-silueta-01 {
+    width: 100%;
+  }
+  div.camisas-largo-01 {
+    width: 100%;
+  }
+  div.camisas-faq .preguntas{
+    width: 100%;
+  }
+  img {
+    width: 100%;
+  }
+  div#historia-intro{
+    width: 100%;
+  }
+  div.historia-intro-texto{
+    width: 100%; 
+  }
+  div.historia-flujo-imagen{
+   width: 100%; 
+  }
+  div#appointment-intro{
+    width: 100%;
+  }
+  div#colecciones-intro{
+    width: 100%;
+  }
+  div#colecciones-images{
+    width: 100%;
+  }
+  div.colecciones-box1, div.colecciones-box2, div.colecciones-box3, div.colecciones-box5, div.colecciones-box6{
+    width: 100%;
+    margin-left: 0;
+  }
+  div#appointment .form .options{
+    width: 100%;
+  }
+  div#appointment .form-confirmation{
+    width: 100%;
+  }
+  div.comprar-step-container{
+    width: 100%;
+  }
+  div.comprar-step{
+    width: 100%;
+  }
+  div.comprar-step-center{
+    width: 100%;
+  }
+  div.comprar-faq{
+    width: 100%;
+  }
+  div.comprar-faq .preguntas{
+    width: 100%;
+  }
+  div.botones{
+    width: 100%;
+  }
+  .button6, input.button{
+    width: 100%;
+    margin-left: 0;
+  }
+  table.camisas-tabla td{
+    padding-bottom: 20px;
   }
 }
 /******************************************************
