--- a/app/design/frontend/default/ves_fashion/template/page/html/head.phtml
+++ b/app/design/frontend/default/ves_fashion/template/page/html/head.phtml
@@ -128,6 +128,7 @@ if (!$session->getParamsMemorizeDisabled()) {
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Libre+Baskerville">
 <base href="<?php echo Mage::getBaseUrl(); ?>" />
 <!--[if lt IE 7]>
 <script type="text/javascript">
