--- a/skin/frontend/default/ves_fashion/css/bootstrap.css
+++ b/skin/frontend/default/ves_fashion/css/bootstrap.css
@@ -851,7 +851,7 @@ pre code {
   margin-right: -10px;
   margin-top: 25px;
   padding-top: 25px;
-  border-top: 1px #f0f0f0 solid;
+  border-top: 1px #cbd0d7 solid;
 }
 /* line 21, ../sass/bootstrap_lib/_mixins.scss */
 .row:before, .row:after {
