--- a/app/design/frontend/default/ves_fashion/template/checkout/cart/coupon.phtml
+++ b/app/design/frontend/default/ves_fashion/template/checkout/cart/coupon.phtml
@@ -36,7 +36,7 @@
             <div class="buttons-set">
                 <button type="button" title="<?php echo $this->__('Apply Coupon') ?>" class="button7" onclick="discountForm.submit(false)" value="<?php echo $this->__('Apply Coupon') ?>"><span><span><?php echo $this->__('Apply Coupon') ?></span></span></button>
                 <?php if(strlen($this->getCouponCode())): ?>
-                    &nbsp; <button type="button" title="<?php echo $this->__('Cancel Coupon') ?>" class="button" onclick="discountForm.submit(true)" value="<?php echo $this->__('Cancel Coupon') ?>"><span><span><?php echo $this->__('Cancel Coupon') ?></span></span></button>
+                    <button type="button" title="<?php echo $this->__('Cancel Coupon') ?>" class="button7" onclick="discountForm.submit(true)" value="<?php echo $this->__('Cancel Coupon') ?>"><span><span><?php echo $this->__('Cancel Coupon') ?></span></span></button>
                 <?php endif;?>
             </div>
         </div>
