--- a/app/design/frontend/default/ves_fashion/template/page/html/footer.phtml
+++ b/app/design/frontend/default/ves_fashion/template/page/html/footer.phtml
@@ -33,6 +33,8 @@ s.src = document.location.protocol + '//wisepops.com/default/index/get-loader?us
 var s2 = document.getElementsByTagName('script')[0];s2.parentNode.insertBefore(s, s2);})();
 </script>
 
+<script type="text/javascript" src="//s3.amazonaws.com/scripts.hellobar.com/e51e607f2277890a149d691b72e46a87a9f51a3b.js"></script>
+
 <div class="footer-bottom">
    
 </div>
