--- a/app/design/frontend/default/ves_fashion/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/ves_fashion/template/checkout/cart/sidebar.phtml
@@ -76,7 +76,7 @@
 	
 	<div class="actions">
         <?php echo $this->getChildHtml('extra_actions') ?>
-        <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button" onclick="setLocation('<?php echo $this->getCheckoutUrl() ?>')"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
+        <!--<button type="button" title="<?php echo $this->__('Checkout') ?>" class="button" onclick="setLocation('<?php echo $this->getCheckoutUrl() ?>')"><span><span><?php echo $this->__('Checkout') ?></span></span></button>-->
 		<a class="view-cart" href="<?php echo $this->getUrl('checkout/cart')?>" title="<?php echo $this->__('View cart');?>"><?php echo $this->__('View cart');?></a>
     </div>
     </div>
