--- a/app/design/adminhtml/default/default/template/ves_tempcp/customize.phtml
+++ b/app/design/adminhtml/default/default/template/ves_tempcp/customize.phtml
@@ -28,7 +28,7 @@
 <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <!-- Mobile viewport optimized: h5bp.com/viewport -->
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width" />
 <meta charset="UTF-8" />
 <title>Live Customizing Theme</title>
 <style type="text/css">
