--- a/app/design/frontend/default/iphone/template/page/html/head.phtml
+++ b/app/design/frontend/default/iphone/template/page/html/head.phtml
@@ -26,7 +26,7 @@
 ?>
 <title><?php echo $this->getTitle() ?></title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
