--- a/app/design/frontend/default/ves_fashion/template/page/html/head.phtml
+++ b/app/design/frontend/default/ves_fashion/template/page/html/head.phtml
@@ -126,7 +126,7 @@ if (!$session->getParamsMemorizeDisabled()) {
 <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <!-- Mobile viewport optimized: h5bp.com/viewport -->
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width" />
 <meta charset="UTF-8" />
 <meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>" />
 <title><?php echo $this->getTitle() ?></title>
@@ -135,7 +135,7 @@ if (!$session->getParamsMemorizeDisabled()) {
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Libre+Baskerville">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Libre+Baskerville" />
 <base href="<?php echo Mage::getBaseUrl(); ?>" />
 <!--[if lt IE 7]>
 <script type="text/javascript">
@@ -207,7 +207,7 @@ if (!$session->getParamsMemorizeDisabled()) {
 	<?php echo implode("\r\n",$css);?>
 </style>
 <?php } else { ?>
-<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 <?php } ?>
 
 <?php if($themeConfig->get('enable_paneltool') ){  ?>
